--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf8" />
   <title>API Connect Onbeef</title>
+  <link rel="icon" type="image/png" href="favicon.png">
   <!-- needed for adaptive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
